--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,20 +4,20 @@ build-backend = "hatchling.build"
 
 [project]
 name = "gpp-prediction"
-version = "0.1.1"
-description = "A package for predicting gross primary production (GPP)"
+version = "0.1.4"
+description = "A package for the GPP related Assignment 3"
 readme = "README.md"
 requires-python = ">=3.9"
 license = {file = "LICENSE"}
 authors = [
-    {name = "Your Name", email = "your.email@example.com"},
+    {name = "Nicolas F. Bader", email = "nicolas.bader@tuwien.ac.at"},
 ]
 keywords = ["gpp", "ecology", "environmental science"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.13",
     "Topic :: Scientific/Engineering",
 ]
 dependencies = [
